Revise all lessons!

--- a/app/views/html_css/lessons/lesson_11.html.erb
+++ b/app/views/html_css/lessons/lesson_11.html.erb
@@ -49,7 +49,7 @@
   So let's go ahead and do this. Inside our <code>.container</code>, let's delete the <code>p</code> tag and replace it with a row. Inside the <code>row</code>, let's make 4 <coe>col</code>umns with the size of <code>3</code>. Your code should look something like this.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;footer class="footer"&gt;
   &lt;div class="container"&gt;
     &lt;div class = "row"&gt;
@@ -80,7 +80,7 @@
   Now let's make a list of links under each of our headers. If you can recall, we can do this by using <code>ul</code> tags (unordered lists) and <code>li</code> tags (list elements). Inside each <code>li</code>, let's create a link.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;footer class="footer"&gt;
   &lt;div class="container"&gt;
     &lt;div class = "row"&gt;
