--- a/app/views/html_css/lessons/lesson_12.html.erb
+++ b/app/views/html_css/lessons/lesson_12.html.erb
@@ -35,7 +35,7 @@
   After we've added some glyphicons, look for things you can improve to make the site look better. Your code should now look something like the code below.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;html&gt;
 &lt;head&gt;
   &lt;!-- Latest compiled and minified CSS --&gt;
