--- a/app/views/html_css/lessons/lesson_6.html.erb
+++ b/app/views/html_css/lessons/lesson_6.html.erb
@@ -16,7 +16,7 @@
   Now that we've saved this file as an HTML file, we can go ahead and start writing HTML code in here. Let's start off by adding our standard HTML tags.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;html&gt;
 &lt;head&gt;
 
@@ -35,7 +35,7 @@
 	Let's add an <code>h1</code> to our body and add the text <code>Hello</code> to see if this actually works. Make your <code>index.html</code> look like this:
 </p> 
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;html&gt;
 &lt;head&gt;
 
@@ -62,7 +62,7 @@
   If we scroll down on this page, the first thing it says is something about a Bootstrap CDN. <strong>CDN stands for Content Delivery Network, and it basically provides developers with a bunch of files without having to download them into your computer or server.</strong> So in our case, instead of manually downloading Bootstrap's CSS and JavaScript files and adding them into our site, <strong>we can simply just copy and paste this little code that they have for us</strong>, and we'd have access to the Bootstrap CSS/JavaScript files. Pretty awesome right? Let's go ahead and add the Bootstrap CDN files into our head section of our HTML.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;html&gt;
 &lt;head&gt;
   &lt;!-- Latest compiled and minified CSS --&gt;
