--- a/app/views/html_css/lessons/lesson_7.html.erb
+++ b/app/views/html_css/lessons/lesson_7.html.erb
@@ -12,7 +12,7 @@
   If we click on "Navbar" on the navigation bar on the right hand side of the bootstrap website, it will take you to a section that explains how to implement the navbar. Let's scroll down and copy the bunch of code in the first example they give us. It should look something like this:
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;nav class="navbar navbar-default"&gt;
   &lt;div class="container-fluid"&gt;
     &lt;!-- Brand and toggle get grouped for better mobile display --&gt;
@@ -83,7 +83,7 @@
   Next, we want to change the text that says "Brand" into whatever the name of our brand is. To change this, we can go into Sublime, simply hit <code>Command + F</code> to pull up the search bar and enter "Brand", and it will look for it. Let's replace this text with a cooler brand name. For me, I'm going to replace this with "Techrise". At this point, the code should look something like this:
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;html&gt;
 &lt;head&gt;
   &lt;!-- Latest compiled and minified CSS --&gt;
