--- a/app/views/html_css/lessons/lesson_8.html.erb
+++ b/app/views/html_css/lessons/lesson_8.html.erb
@@ -8,7 +8,7 @@
   Let's go back to the bootstrap website CSS page and see what else we have to do. If we scroll down, under "Containers" we can see that it's telling us that the content needs to be wrapped around in a <code>.container</code> or <code>.container-fluid</code>. The page also tells us that <code>.container</code> has padding on the side, while <code>.container-fluid</code> gives you a container that spans the entire width of your browser. But let's not worry too much about what that means and just go ahead and add a <code>div</code> with a class of <code>container-fluid</code> into our <code>body</code> under our navbar section.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
   &lt;!-- rest of navbar code above --&gt;
             &lt;/ul&gt;
           &lt;/li&gt;
@@ -34,7 +34,7 @@
   Let's now add some text in here that tells users what our company does. Let's replace the text inside the <code>h1</code> tag with our brand name. Let's then add some paragraphs about what we do. So in our case, I'm going to add an opening and closing <code>p</code> tag, and between those, I'm going to add some text like "Learn how to code with Techrise". Then, I'm going to add another paragraph by adding a opening and closing <code>p</code> tag and inserting some text between those. So maybe something like "Learn HTML, CSS, JavaScript, Ruby, and Ruby on Rails". At this point, your code should look something similar to this.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
   &lt;html&gt;
   &lt;head&gt;
     &lt;!-- Latest compiled and minified CSS --&gt;
