--- a/app/views/ideator_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_19.html.erb
@@ -1,7 +1,7 @@
 <h1><%= title_for(IdeatorLesson, 6, 2) %></h1>
 
 <p>
-  Now that we've got the "About" page, let's add the final page - the "Random" page. On this page, we want to somehow display one random idea from our database, and everytime a user refreshes the page, we want it to generate another random idea.
+  Now that we've got the "About" page, let's add the final page - the "Random" page. On this page, we want to display one random idea from our database, and everytime a user refreshes the page, we want it to generate another random idea.
 </p>
 
 <p>
@@ -9,7 +9,7 @@
 </p>
 
 <p>
-  We're first going to create a file called <code>random.html.erb</code> under <code>/app/views/ideas/</code>.
+  We're first going to create a file called <code>random.html.erb</code> under <code>/app/views/ideas/random.html.erb</code>.
 </p>
 
 <p>
@@ -25,31 +25,37 @@
 </code></pre>
 
 <p>
-  What we are doing here is ordering all of our ideas and ordering them randomly. Then we are grabbing the first idea off the randomly ordered ideas, and then storing it into <code>@idea</code>.
+  What we are doing here is ordering all of our ideas randomly. Then we are grabbing the first idea off of the randomly ordered ideas, and then storing it into <code>@idea</code>. Let's now add the following method to the bottom of our <code>ideas_controller.rb</code>.
 </p>
+
+<pre><code class="ruby">
+def random
+  @idea = Idea.order("RANDOM()").first
+end
+</code></pre>
 
 <p>
-  <code>@idea</code> will now give us a random idea, so let's go into our <code>views</code> and display this.
+  Like we've explained before, with this method called <code>random</code>, we can now use the instance variable <code>@idea</code> in our <code>views</code>. With this piece of code, <code>@idea</code> will now give us a random idea, so let's go into our <code>random.html.erb</code> and display this. In <code>random.html.erb</code>, add the following piece of code:
 </p>
 
-<p>
-  Let's just list the random idea for now like this:
-</p>
-
-<pre><code class="html">
+<pre><code class="erb">
 &lt;%= @idea.description %&gt;
 &lt;%= @idea.author %&gt;
 </code></pre>
+
+<p>
+  Here, we are displaying the <code>description</code> and <code>author</code> of the <code>@idea</code>. Save the file.
+</p>
 
 <p>
   If we go to <code>http://localhost:3000/random</code>, we see an idea and every time we refresh the page, a new idea comes up. Awesome!
 </p>
 
 <p>
-  Now we just want to put this in a panel, like we did on the index page. We're just going to pull the code from <code>index.html.erb</code> and tweak it a little bit:
+  Now we just want to put this in a bootstrap panel, like we did on the index page. We're just going to pull the code from <code>index.html.erb</code> and tweak it a little bit. Replace the code in <code>random.html.erb</code> with this:
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;div class="panel panel-default"&gt;
   &lt;div class="panel-body"&gt;
     &lt;h3&gt;&lt;%= @idea.description %&gt;&lt;/h3&gt;
@@ -62,34 +68,34 @@
 </code></pre>
 
 <p>
-  If we refresh the page, we see that it's nicely dispayed now. Now let's add a button that will refresh the page for us.
+  If we refresh the page, we see that it's nicely dispayed now. Now let's add a button above the panel that will refresh the page for us each time we press the button.
 </p>
 
 <p>
-  On the top of <code>random.html.erb</code>, let's add a link to the random page and give it some bootstrap button classes.
+  On the very top of <code>random.html.erb</code>, let's add a link to the random page (<code>random_path</code>) and give it some bootstrap button classes.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;%= link_to 'Inspire Me', random_path, class: 'btn btn-primary btn-block' %&gt;
 </code></pre>
 
 <p>
-  If we refresh the page, we see the button! If we click on it, another idea is displayed. Awesome!
+  Save the file. Now if we refresh the page, we see the button! If we click on it, another idea is displayed. Awesome!
 </p>
 
 <p>
-  There's one little gotcha for this page though. The page wil actually give us an error the <code>@idea</code> is <code>nil</code> if we don't have any ideas. This isn't good and it means that we need to tinker with the code here.
+  There's one little gotcha for this page though. The page will actually give us an error that the <code>@idea</code> is <code>nil</code> if we don't have any ideas yet. This isn't good and it means that we need to tinker with the code here.
 </p>
 
 <p>
-  What we can do is use an <code>if else</code> statement and say, if <code>@idea</code> is present, then we display the button and the random idea, else display some message saying there are no ideas.
+  What we can do is use an <code>if else</code> statement and say, if <code>@idea</code> is present, then we display the button and the random idea, otherwise display some message saying there are no ideas.
 </p>
 
 <p>
   We can actually do this pretty simply in our views.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 
 &lt;% if @idea %&gt;
   &lt;%= link_to 'Inspire Me', random_path, class: 'btn btn-primary btn-block' %&gt;
@@ -110,9 +116,13 @@
 &lt;% end %&gt;
 </code></pre>
 
-<p>
-  In case you were wondering, in Ruby, instead of writing something like <code>if something.present?</code> we can simpy say <code>if something</code> and it would return true if <code>something</code> existed. In our case we are checking if <code>@idea</code> is present simply by adding <code>if @idea</code>.
-</p>
+<div class="well">
+  <h3>Shortcut for checking if something exists</h3>
+
+  <p>
+    In case you were wondering, in Ruby, instead of writing something like <code>if something.present?</code> we can simpy say <code>if something</code> and it would return true if <code>something</code> existed. In our case we are checking if <code>@idea</code> is present simply by adding <code>if @idea</code>, instead of <code>if @idea.present?</code> or <code>if @idea.exists?</code>.
+  </p>
+</div>
 
 <p>
   Sweet, you've now added all of the pages succesfully! The final step in this lesson is to add a link to the random page in the navbar.
@@ -121,6 +131,7 @@
 <p>
   Go to <code>application.html.erb</code> in Sublime and above the link to the "About" page, add the "Random" page link. I named my page the "Inspire Me" page, just because it sounds cooler :D
 </p>
+
 
 <p>
   Again, let's try to generate this link yourself. A hint is to look into your <code>rake routes</code>!
@@ -131,11 +142,25 @@
 <br class="clear">
 
 <p>
-  Let's now go through the standard git workflow.
+  If you did it correctly, it should look like this:
 </p>
+
+<pre><code class="erb">
+&lt;div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"&gt;
+  &lt;ul class="nav navbar-nav navbar-right"&gt;
+    &lt;li&gt;&lt;%= link_to 'All Ideas', root_path %&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;%= link_to 'Inspire Me', random_path %&gt;&lt;/li&gt;
+    &lt;li&gt;&lt;%= link_to 'About', about_path %&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/div&gt;&lt;!-- /.navbar-collapse --&gt;
+</code></pre>
 
 <p>
   Congratulations! You've now officially built a fully functional app! The next few steps will be the final touches to get your app fully in shape :)
+</p>
+
+<p>
+  Let's now go through the standard git workflow.
 </p>
 
 
