--- a/app/views/ideator_lessons/lessons/lesson_22.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_22.html.erb
@@ -13,5 +13,5 @@
 </p>
 
 <p>
-  Submit your app down below and share your app with your friends!
+  Submit your app down below by pasting a link to your GitHub below! Congratulations on your hard work!
 </p>
