--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -43,7 +43,7 @@ end
 	Inside index.html.erb, let’s add this:
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;h1&gt;This is my first app ever and I’m super excited to become a coder&lt;/h1&gt;
 </code></pre>
 
