--- a/app/views/ideator_lessons/lessons/lesson_7.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_7.html.erb
@@ -8,7 +8,7 @@
 	First, if you haven’t done so, let’s change the Brand name in the navbar. To do this, let's replace the “Brand” text in the navbar with “Ideator”.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;div class="navbar-header"&gt;
   &lt;button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"&gt;
     &lt;span class="sr-only"&gt;Toggle navigation&lt;/span&gt;
@@ -51,7 +51,7 @@
 	So let’s go ahead and go into sublime and open up <code>application.html.erb</code>. In your &lt;head&gt; section, add in the code. It should look something like this:
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'&gt;
 </code></pre>
 
