--- a/app/views/ideator_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_8.html.erb
@@ -45,7 +45,7 @@ body {
   Right after the closing <code>div</code> that we just inserted, let's steal the footer code from the StackOverflow post above and paste it into our code. It should look something like this.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;!--closing div for div id = "wrap"--&gt;
 &lt;/div&gt;
 
@@ -91,7 +91,7 @@ body {
 	Let's duplicate this and make 2 more of these <code>div</code>s in the footer to make 3 seperate columns in one row on a medium screen. Let's also remember not to forget to wrap it in a <code>row</code>. So now it should look something like this.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;!--closing div for div id = "wrap"--&gt;
 &lt;/div&gt;
 
@@ -119,7 +119,7 @@ body {
   Now we can add content inside of here. Feel free to add whatever you want inside of here. This is what I added to my app.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;!--closing div for div id = "wrap"--&gt;
 &lt;/div&gt;
 
