--- a/app/views/html_css/lessons/lesson_9.html.erb
+++ b/app/views/html_css/lessons/lesson_9.html.erb
@@ -25,7 +25,7 @@
   We can add a row by adding a <code>div</code> with a class of <code>.row</code>. Let's go into Sublime and right underneath the jumbotron div that we created, let's add a <code>div</code> with a class or "row". Make sure to close the div ;)
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
     &lt;!-- rest of code above --&gt;
 
     &lt;div class="jumbotron"&gt;
@@ -68,7 +68,7 @@
   Inside our <code>&lt;div class = "row"&gt;</code>, let's add 3 <code>div</code>s with the class of <code>col-md-4</code>. This class is basically saying, let's make a <code>col</code>umn with a size of <code>4</code>, when the screen is medium size (<code>md</code>). Inside each <code>div</code>, let's add <code>&lt;h3&gt;Hello&lt;/h3&gt;</code> inside like this:.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
 &lt;div class = "row"&gt;
 
   &lt;div class = "col-md-4"&gt;
@@ -99,7 +99,7 @@
   Let's copy the code that has a panel with a header, and paste it inside all 3 of our <code>&lt;div class = "col-md-4"&gt;</code>s. Let's try refreshing our page and see if it works. The code should look something like below.
 </p>
 
-<pre><code class="html">
+<pre><code class="erb">
   &lt;!-- a bunch of code above --&gt;
 
   &lt;div class="jumbotron"&gt;
