--- a/app/views/ideator_lessons/lessons/lesson_21.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_21.html.erb
@@ -1,6 +1,29 @@
 <h1><%= title_for(IdeatorLesson, 7, 2) %></h1>
 
+<p>
+  You're almost done! The final step is to tweak the front end to make the app look amazing.
+</p>
 
 <p>
-  Let's now go through the standard git workflow.
+  This is going to be a <strong>self guided lesson</strong>. Make the app look exactly how you want it!
+</p>
+
+<p>
+  Here are a few tips:
+</p>
+
+<ul>
+<li>Play around with <code>font-weight</code></li>
+<li>Play around with <code>letter-spacing</code></li>
+<li>Play around with <code>font-size</code></li>
+<li>Play around with the <code>background-color</code> of <code>.panel_body</code></li>
+</ul>
+
+<p>
+  Spend some time to really try to customize your app to look like how you think it should look. Doing things yourself is where you'll learn the most. <strong>Google Chrome's Developer Tools</strong> will become super handy! Review how you can use developer tools to test out new looks for your app.
+</p>
+
+
+<p>
+  After you're done with that, make sure to go through the standard git workflow.
 </p>
