--- a/app/views/ideator_lessons/lessons/lesson_22.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_22.html.erb
@@ -15,3 +15,5 @@
 <p>
   Submit your app down below by pasting a link to your GitHub below! Congratulations on your hard work!
 </p>
+
+<% @submissions = true %>
