--- a/app/views/application/_lesson_nav_section.html.erb
+++ b/app/views/application/_lesson_nav_section.html.erb
@@ -2,6 +2,6 @@
   <p>
     Understand the gist? Cool, let's move on.
   </p>
-  <%= link_to 'Previous Lesson', "#{@course_link}/#{@prev_lesson}", class: 'btn btn-warning btn-lg' if @prev_lesson > 0 %>
-  <%= link_to 'Next Lesson', "#{@course_link}/#{@next_lesson}", class: 'btn btn-success btn-lg' if @next_lesson <= @lesson_length %>
+  <%= link_to 'Previous Lesson', "/#{@course_link}/#{@prev_lesson}", class: 'btn btn-warning btn-lg' if @prev_lesson > 0 %>
+  <%= link_to 'Next Lesson', "/#{@course_link}/#{@next_lesson}", class: 'btn btn-success btn-lg' if @next_lesson <= @lesson_length %>
 </div>
