--- a/app/views/ruby_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_2.html.erb
@@ -7,11 +7,12 @@
 <h3>Assignments:</h3>
 
 <ul>
-<li>Unit 1 ~ 7</li>
-<li>Unit 9: OBJECT-ORIENTED PROGRAMMING, PART I</li>
+<li>Create an Account</li>
+<li>Finish Unit 1 ~ 7</li>
+<li>Finish Unit 9: OBJECT-ORIENTED PROGRAMMING, PART I</li>
 </ul>
 
-<h3>Duration: 1 week</h3>
+<h3>Duration: Less than 1 week</h3>
 
 <p>
   Once you've completed these units, take a screenshot of your Codecademy account and submit it down below so that we can make sure you have completed the assignments :)
