--- a/app/views/ruby_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_3.html.erb
@@ -76,6 +76,31 @@ Foo
 Foo
 </code></pre>
 
+<h3>First Steps</h3>
+<p>
+  First, go into Sublime text and save a file called <code>foobar.rb</code> into <code>~desktop</code>.
+</p>
+
+<p>
+  Next, let's navigate to your desktop. Go into your terminal and type in the following:
+</p>
+
+<pre><code class="bash">
+cd ~/desktop
+</code></pre>
+
+<p>
+  Lastly, to run your ruby file, type in the following in your terminal:
+</p>
+
+<pre><code class="bash">
+ruby foobar.rb
+</code></pre>
+
+<p>
+  Press enter. This shouldn't do anything since you haven't wrote any code in the file yet. Now that you've got everything set up, put your ruby code in your <code>foobar.rb</code> file, and when you want to run the file, type in <code>ruby foobar.rb</code>.
+</p>
+
 <div class="well">
   <h3>HINTS!</h3>
   <ul>
